[gd_scene load_steps=7 format=2]

[ext_resource path="res://tipografia.tres" type="DynamicFont" id=1]
[ext_resource path="res://LOGO2.png" type="Texture" id=2]
[ext_resource path="res://principal.gd" type="Script" id=3]
[ext_resource path="res://Cuestionario.tscn" type="PackedScene" id=4]
[ext_resource path="res://DATOSUSUARIO-INPUT/INGRESODATOS.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/SeleccionCategoria.tscn" type="PackedScene" id=6]

[node name="Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
cuestionario = ExtResource( 4 )
bienvenida = ExtResource( 5 )
seleccion_categoria = ExtResource( 6 )

[node name="MenuInicio" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MenuInicio"]
anchor_top = 0.242
anchor_right = 1.0
anchor_bottom = 0.525
margin_left = 3.1748
margin_top = 3.1748
margin_right = 3.1748
margin_bottom = 3.1748
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="MenuInicio/MarginContainer"]
margin_right = 480.0
margin_bottom = 203.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="MenuInicio"]
anchor_top = 0.571
anchor_right = 1.0
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInicio/MarginContainer2"]
margin_right = 480.0
margin_bottom = 236.0

[node name="Button" type="Button" parent="MenuInicio/MarginContainer2/VBoxContainer"]
margin_right = 480.0
margin_bottom = 116.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Comenzar"
flat = true

[node name="Button2" type="Button" parent="MenuInicio/MarginContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 480.0
margin_bottom = 236.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Salir"
flat = true
[connection signal="pressed" from="MenuInicio/MarginContainer2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MenuInicio/MarginContainer2/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
